Fix planet image on wrong z-index

--- a/css/style.css
+++ b/css/style.css
@@ -56,7 +56,7 @@ nav {
   align-items: center;
 }
 #hamburger-menu-toggle {
-  z-index: 2;
+  z-index: 1;
   background: none;
   border: none;
   font-size: 2em;
@@ -65,7 +65,6 @@ nav {
   color: white;
 }
 #planet-link-menu {
-  /* scroll-behavior: l; */
   top: 0;
   right: 0;
   position: fixed;
@@ -100,10 +99,12 @@ main {
 @keyframes levitate {
   0%,
   100% {
+    z-index: -10;
     transform: translateY(0px);
     box-shadow: 0px 15px 30px rgba(0, 0, 0, 0.3);
   }
   50% {
+    z-index: -10;
     transform: translateY(-10px);
     box-shadow: 0px 25px 40px rgba(0, 0, 0, 0.4);
   }
@@ -122,7 +123,6 @@ html {
   padding-bottom: 10px;
 } */
 body {
-  scroll-snap-type: y mandatory; /* Skal egentlig spappe til neste div ved scrolling */
   scroll-behavior: smooth;
   min-height: 100svh;
 }
@@ -142,19 +142,14 @@ a {
   text-decoration: none;
   color: inherit;
 }
-
-.nav-icon {
-  width: auto; /* Set ønskja breidde */
-  height: 50px; /* Beheld proporsjonane */
-}
-
-img {
+/* img {
   max-height: 15rem;
   width: auto;
   padding: 2em 0em 2em 0em;
-}
+} */
 
 article {
+  z-index: -1;
   display: flex;
   flex-direction: column;
   align-items: center;
